idf_component_register(SRCS "station_server_main.c"
                            "http_server/http_server.c" 
                            "D:/ESP32IDE/Espressif/frameworks/esp-idf-v5.3.1/examples/common_components/protocol_examples_common/protocol_examples_utils.c"
                   INCLUDE_DIRS "."
                                "http_server"
                                "D:/ESP32IDE/Espressif/frameworks/esp-idf-v5.3.1/examples/common_components/protocol_examples_common/include")

